--- a/package.json
+++ b/package.json
@@ -10,19 +10,15 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "@astrojs/image": "^0.7.0",
+  "devDependencies": {
     "@astrojs/preact": "^1.1.0",
     "@astrojs/tailwind": "^2.0.0",
     "astro": "^1.2.4",
     "preact": "^10.6.5",
-    "tailwindcss": "^3.0.24"
-  },
-  "devDependencies": {
+    "tailwindcss": "^3.0.24",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.5.4",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+    "prettier-plugin-astro": "^0.5.4"
   }
 }
