--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@astrojs/preact": "^1.1.0",
     "@astrojs/tailwind": "^2.0.0",
@@ -19,10 +18,10 @@
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "astro": "^1.2.4",
-    "vercel": "^28.4.2",
     "preact": "^10.6.5",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.4",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "vercel": "^28.4.2"
   }
 }
